--- a/MenuBI/app/src/main/res/layout/activity_ajoute_plat.xml
+++ b/MenuBI/app/src/main/res/layout/activity_ajoute_plat.xml
@@ -1,79 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_margin="16dp"
+    android:padding="16dp"
+
     tools:context="com.example.menubi.AjoutePlat">
 
+
     <ImageView
+        android:id="@+id/imageplat"
         android:layout_width="fill_parent"
         android:layout_height="150dp"
-        android:id="@+id/imageplat"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_image_black_24dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:clickable="true"
-        />
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_image_black_24dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="16dp"
+        tools:ignore="MissingConstraints" />
+
     <ImageButton
+        android:id="@+id/btnInputImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:src="@drawable/ic_add_a_photo_black_24dp"
-        android:id="@+id/btnInputImage"
-        android:layout_margin="16dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/imageplat"
+        tools:layout_editor_absoluteX="299dp"
+        tools:ignore="MissingConstraints" />
 
-
+    <Spinner
+        android:id="@+id/activity_main_name_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        app:layout_constraintTop_toTopOf="@+id/prix"
+        tools:layout_editor_absoluteX="16dp" />
 
     <EditText
         android:id="@+id/nomPlat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="64dp"
         android:hint="Nom"
-        android:inputType="text" />
+        android:inputType="text"
+        app:layout_constraintTop_toTopOf="@+id/btnInputImage"
+        tools:layout_editor_absoluteX="16dp" />
 
     <EditText
         android:id="@+id/descriptionPlat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="20dp"
 
-        android:hint="Description"/>
+        android:layout_marginTop="16dp"
+        android:hint="Description"
+        app:layout_constraintTop_toBottomOf="@+id/nomPlat"
+        tools:layout_editor_absoluteX="16dp" />
+
     <EditText
         android:id="@+id/prix"
-        android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:hint="Prix"/>
-    <Spinner
-        android:id="@+id/activity_main_name_input"
-        android:layout_marginBottom="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        />
+        android:layout_marginTop="64dp"
+        android:hint="Prix"
+        app:layout_constraintTop_toTopOf="@+id/descriptionPlat"
+        tools:layout_editor_absoluteX="16dp" />
 
     <Button
         android:id="@+id/btnValider"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="32dp"
         android:text="Valider"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/activity_main_name_input"
+        tools:layout_editor_absoluteX="259dp"
+        tools:ignore="MissingConstraints" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
