--- a/MenuBI/app/src/main/res/layout/nav_header_home.xml
+++ b/MenuBI/app/src/main/res/layout/nav_header_home.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:textColor="@android:color/white"
-        android:text="Mya"
+        android:text="Espace Client"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
 
