--- a/MenuBI/app/src/main/res/layout/app_bar_home.xml
+++ b/MenuBI/app/src/main/res/layout/app_bar_home.xml
@@ -22,6 +22,10 @@
 
     <include layout="@layout/content_home" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -29,6 +33,18 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:backgroundTint="@android:color/white"
-        android:src="@drawable/ic_shopping_cart_black_24dp" />
+        android:src="@drawable/ic_shopping_cart_black_24dp"
+
+        />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/guide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left"
+        android:layout_margin="@dimen/fab_margin"
+        android:backgroundTint="@android:color/white"
+        android:src="@drawable/ic_smartphone_black_24dp" />
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
