--- a/MenuBI/app/src/main/res/layout/content_client_pay.xml
+++ b/MenuBI/app/src/main/res/layout/content_client_pay.xml
@@ -33,11 +33,11 @@
         >
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/refers"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/enter_number"
             android:ems="10"
-            android:inputType="number"
+            android:editable="false"
             android:textSize="22sp"
             />
 
@@ -53,11 +53,11 @@
         >
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/tables"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/somme"
             android:ems="10"
-            android:inputType="number"
+            android:editable="false"
             android:textSize="22sp"
             />
 
@@ -86,28 +86,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="43dp"
-        android:textSize="25sp"
-        android:textColor="@color/graylight"
-        android:text="@string/select_table"
-
-        />
-
-
-    <Spinner
-        android:id="@+id/spiner"
-        android:layout_width="0dp"
-        android:layout_weight="4"
-        android:visibility="visible"
-        android:layout_height="70dp"
-        android:clickable="true"
-        android:focusable="true"/>
-        <!--   android:touchscreenBlocksFocus="true"-->
-
-    </LinearLayout>
+        android:layout_marginTop="40dp"/>
 
     <RadioGroup
         android:layout_width="match_parent"
