--- a/MenuBI/app/src/main/res/layout/activity_details_plats.xml
+++ b/MenuBI/app/src/main/res/layout/activity_details_plats.xml
@@ -97,12 +97,13 @@
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
+
                         <ImageView
 
-                            android:src="@drawable/ic_attach_money_black_24dp"
-                            android:layout_weight="1"
                             android:layout_width="0dp"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:src="@drawable/ic_attach_money_black_24dp" />
                         <TextView
                             android:id="@+id/food_price"
 
